dbserver role added

--- a/studija-slucaja/deploy_dbservers.yaml
+++ b/studija-slucaja/deploy_dbservers.yaml
@@ -5,21 +5,15 @@
   become: true
   roles:
     - base
-
+    
 - hosts: dbservers
   remote_user: ansible-control
   gather_facts: true
   become: true
   vars_files:
-      - vars/main.yaml
+    - vars/main.yaml
   roles:
-      - geerlingguy.mysql
+    - dbserver
 
-- hosts: dbservers
-  remote_user: ansible-control
-  gather_facts: true
-  become: true
-  tasks:
-    - name: expose port 3306
-      shell: firewall-cmd --zone=public --add-port=3306/tcp
+
 
